--- a/front-gateway/src/components/sharedStyles/styles.scss
+++ b/front-gateway/src/components/sharedStyles/styles.scss
@@ -19,6 +19,10 @@ html {
   height: 100%;
 }
 
+html {
+  background-color: $gray-lighter;
+}
+
 body {
   overflow-x: hidden;
 }
